# canonical

./: CMakeLists.txt  README.md
include/: HttpClient.hpp  UbuntuReleaseInfo.hpp
src/: HttpClient.cpp  Main.cpp  UbuntuReleaseInfoImpl.cpp
